--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+06-webserver/public/assets/js
+06-webserver/public/assets/css
+06-webserver/node_modules
 05-weather-world/node_modules/
 04-to-do/node_modules/
 Node-multiplicar-1/node_modules/
