--- a/06-webserver/package.json
+++ b/06-webserver/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "06-webserver",
-  "version": "1.0.0",
-  "description": "webserver in NodeJS",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Miller Camilo Vega Diaz",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "hbs": "^4.1.1"
-  }
+    "name": "06-webserver",
+    "version": "1.0.0",
+    "description": "webserver in NodeJS",
+    "main": "app.js",
+    "scripts": {
+        "start": "node server.js",
+        "nodemon": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Miller Camilo Vega Diaz",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "hbs": "^4.1.1"
+    }
 }
