--- a/07-restserver/package.json
+++ b/07-restserver/package.json
@@ -9,7 +9,11 @@
   "author": "Miller Camilo Vega Diaz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.9",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
