--- a/07-restserver/package.json
+++ b/07-restserver/package.json
@@ -14,6 +14,7 @@
     "colors": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.9",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.12.0"
   }
 }
